<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/addTaskBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:src="@drawable/ic_add" />

    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addTaskBtn"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/taskTitle"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/linearDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskTitle"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/taskDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/taskDate"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/taskTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_marginStart="8dp"
            android:text="@string/taskTime"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="invisible"/>

    </LinearLayout>

    <TextView
        android:id="@+id/taskPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearDateTime"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:text="@string/taskPriority"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/taskCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/goFirstBtn"
        android:gravity="center_horizontal"
        android:text="@string/numberTask"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/goFirstBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_fr"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/goLeftBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/goFirstBtn"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_left"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/editBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/goLeftBtn"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_edit"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/deleteBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/editBtn"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_delete"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/goRightBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/deleteBtn"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_right"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/goLastBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_ff"
        android:visibility="invisible" />

</RelativeLayout>